<resources>
    <string name="app_name">FooBar App</string>
    <string name="registration_title">Join FooBar</string>
    <string name="registration_msg">Create an account to contact with friends, family
        and communities of people who share your interests.</string>
    <string name="account_exists_btn">I already have an account</string>
    <string name="registration_img">registration_img</string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="enter_display_name">Enter Display Name:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="submit">Submit</string>
    <string name="LogOut">Log Out</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login Now</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_account">Create New Account</string>
    <string name="default_picture">Default Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="app_logo">APP_LOGO</string>
    <string name="user_photo">USER_PHOTO</string>
    <string name="submitBtn">Submit</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="delete_post">Delete Post</string>
    <string name="set_changes_post">Set Changes</string>
    <string name="valid_user_name">Tzion Mea</string>
    <string name="add_comment_msg">What are your thoughts ?</string>
    <string name="edit_post_string">Edit Post</string>
    <string name="toolbar_comments">Comments</string>
    <string name="add_new_comment">Add new comment</string>
    <string name="foobook_logo">Foobook Logo</string>
    <string name="search_button">Search Button</string>
    <string name="add_post_button">Add Post Button</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="chat_logo">Chat Logo</string>
    <string name="friends_logo">Friends Logo</string>
    <string name="menu_button_text">Menu</string>
    <string name="friends_button_text">Friends</string>
    <string name="chat_button_text">Chat</string>
    <string name="add_post_text">Add Post</string>
    <string name="confirmation_button">Confirmation Button</string>
    <string name="hardcoded_user">Tzion Mea</string>
    <string name="caption_new_post_text">What are your thoughts ?</string>
    <string name="new_post_image">New post image</string>
    <string name="add_photo_button">Add photo button</string>
    <string name="attach_image">Attach image</string>
    <string name="take_photo_button">Take Photo button</string>
    <string name="take_photo_text">Take photo</string>
    <string name="attach_photo_text">Attach Photo</string>
    <string name="take_post_photo_text">Take Photo</string>
    <string name="edit_comment_logo">edit_comment_logo</string>
    <string name="comment_username_text">username</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="the_username_or_password_is_incorrect_please_try_again">The username or password is incorrect. Please try again.</string>
    <string name="network_error">Network error</string>
    <string name="servers_issue_please_try_again_later">Servers issue... Please try again later.</string>
    <string name="view_friends">view Friends</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsdesc">Notifications</string>
    <string name="delete_user">Delete User</string>
    <string name="add_friend">Add Friend</string>
    <string name="baseUrl">http://10.0.2.2:8080/</string>
    <string name="BASEURL">http://10.0.2.2:8080/</string>
</resources>