<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.AddPostActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayoutcurrent"
      android:layout_width="398dp"
      android:layout_height="459dp"
      android:layout_marginTop="164dp"
      android:layout_marginBottom="114dp"
      android:padding="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <ImageView
        android:id="@+id/current_image_post"
        android:layout_width="339dp"
        android:layout_height="409dp"
        android:contentDescription="@string/new_post_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout2"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="4dp"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayoutcurrent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <ImageButton
        android:id="@+id/options_edit_photo"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/confirmation_button"
        android:foregroundGravity="center_vertical|clip_horizontal"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_post_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/options_edit_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/linearLayout5"
      android:layout_width="392dp"
      android:layout_height="110dp"
      android:layout_marginBottom="2dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayoutcurrent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userLogoAddPost"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircularImageView" />

    <TextView
        android:id="@+id/user_name_edit_post"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userLogoAddPost"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="@+id/userLogoAddPost"
        app:layout_constraintTop_toBottomOf="@+id/userLogoAddPost"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/caption_new_post"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/caption_new_post_text"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userLogoAddPost"
        app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="109dp"
      android:layout_marginTop="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayoutcurrent">

    <ImageButton
        android:id="@+id/take_photo_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="120dp"
        android:background="@null"
        android:contentDescription="@string/take_photo_button"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Add_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/add_photo_button"
        android:src="@drawable/add_final_logo"
        app:layout_constraintEnd_toStartOf="@+id/take_photo_button"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attach_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_photo_text"
        app:layout_constraintEnd_toEndOf="@+id/Add_photo"
        app:layout_constraintStart_toStartOf="@+id/Add_photo"
        app:layout_constraintTop_toBottomOf="@+id/Add_photo" />

    <TextView
        android:id="@+id/take_post_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_post_photo_text"
        app:layout_constraintEnd_toEndOf="@+id/take_photo_button"
        app:layout_constraintStart_toStartOf="@+id/take_photo_button"
        app:layout_constraintTop_toBottomOf="@+id/take_photo_button" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>