<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.CommentsActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:elevation="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/toolbar_comments"
        android:gravity="center"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

  </androidx.appcompat.widget.Toolbar>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view_comments"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline6" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.03" />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:layout_constraintVertical_bias="0.0">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_logo_commenting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/user_photo_michael_final"
        app:shapeAppearanceOverlay="@style/CircularImageView" />

    <TextView
        android:id="@+id/comment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/user_logo_commenting"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/user_logo_commenting"
        android:text="@string/valid_user_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/insert_comment_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/comment_user_name"
        android:layout_alignStart="@id/comment_user_name"
        android:layout_marginStart="-46dp"
        android:layout_marginTop="8dp"
        android:hint="@string/add_comment_msg"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="text" />

    <ImageButton
        android:id="@+id/submit_new_comment"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/insert_comment_text"
        app:srcCompat="@drawable/add_final_logo"
        android:contentDescription="@string/add_new_comment" />

  </RelativeLayout>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="207dp" />


</androidx.constraintlayout.widget.ConstraintLayout>